# AI4SIDS-gov

./: .gitignore  PLAN.md  README.md  taskfile.yml
apps/backend/: .dockerignore  .gitignore  Dockerfile  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 5ca6cf76e503_create_incidents_table.py  6ae0a692151e_create_reports_table.py  a7d3f8e91c42_add_template_version_to_reports.py  b8f2e4a91c7d_add_source_to_incidents.py  f3a1c9d7b204_create_report_templates_table.py
apps/backend/app/: __init__.py  config.py  db.py  main.py
apps/backend/fixtures/: sample_sitrep_small.csv  sample_small.csv
apps/backend/tests/: conftest.py  test_api_ingest.py  test_api_overview.py  test_api_reports.py  test_api_templates.py  test_citation_check.py  test_citation_check_helpers.py  test_cli.py  test_cli_generate.py  test_cli_sitreps.py  test_cli_templates.py  test_config.py  test_contracts.py  test_db.py  test_engine_assembly.py  test_engine_generate.py  test_ingest.py  test_ingest_parse.py  test_llm.py  test_mcp_data_module.py  test_meta_api.py  test_metrics_helpers.py  test_metrics_homes_and_casualties.py  test_metrics_incident_count.py  test_metrics_needs_damage_coverage.py  test_metrics_street_and_relief.py  test_models.py  test_normalize.py  test_registry.py  test_renderer.py  test_report_store.py  test_sitreps_ingest.py  test_sitreps_module.py  test_survey123_metrics_dispatch.py  test_survey123_module.py  test_template_loader.py  test_template_registry.py  test_template_store.py
(+106 files in other folders)
